(ocamllex lexer)

(menhir
 (modules tokens)
 (flags --only-tokens)
 (explain false))

(menhir
 (modules tokens parser)
 (merge_into parser)
 (flags --external-tokens Tokens)
 (explain true))

(library 
 (libraries str)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (modules syntax lexer tokens parser)
 (name rust_parser)
 (wrapped false))

(env
 (dev
  (flags
   (:standard -w -27 -w -33 -w -38 -w -26))))

; suppressing unused token warnings
