(ocamllex RSlexer)

(menhir
 (modules RStokens)
 (flags --only-tokens)
 (explain false))

(menhir
 (modules RStokens RSparser)
 (merge_into RSparser)
 (flags --external-tokens RStokens)
 (explain true))

(library 
 (libraries str)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq))
 (modules RSsyntax RSlexer RStokens RSparser RSprinter)
 (name rust_parser)
 (public_name rust_parser)
 (wrapped false))


(env
 (dev
  (flags
   (:standard -w -27 -w -33 -w -38 -w -26))))

; suppressing unused token warnings
